* What's new in version 3.0

- The new "interactive" mode, specified by "stap -i" drops you into a
  command-line prompt where you can build up a script, run it, edit
  it, run it again, etc. Type "help" for a list of commands.

- Add Czech version of manual pages.

- The stap compile server will log the stap client's options that are passed
  to the server. The options that get logged on the server will include the
  script name or the -e script, depending on which is used by the client.

- Embedded-C functions and blocks may now access script level global variables
  using the STAP_GLOBAL_GET_* and STAP_GLOBAL_SET_* macros.

  To read or write the script global var, the /* pragma:read:var */ or
  /* pragma:write:var */ marker must be placed in the embedded-C function or block.
  The written type must match the type inferred at script level.

  Scalars:
    STAP_GLOBAL_SET_var(STAP_GLOBAL_GET_var()+1) -> increments script global var by 1
    STAP_GLOBAL_SET_var("hello")

  Associative arrays:
    STAP_GLOBAL_GET_var(index-1, ..., index-n)
    STAP_GLOBAL_SET_var(index-1, ..., index-n, new value)

- Probe point brace expansion is now supported to improve brevity in
  specifying probe points. For example,

  process.{function("a"), function("b").{call,return}}
  => process.function("a"), process.function("b").call, process.function("b").return

  process.{function("*").callees,plt}?
  => process.function("*").callees?, process.plt?

  {kernel,module("nfs")}.function("nfs*")!
  => kernel.function("nfs*")!, module("nfs").function("nfs*")!

- Profiling timers at arbitrary frequencies are now provided and perf probes
  now support a frequency field as an alternative to sampling counts.

  probe timer.profile.freq.hz(N)
  probe perf.type(N).config(M).hz(X)

  The specified frequency is only accurate up to around 100hz. You may
  need to provide a higher value to achieve the desired rate.

- New --monitor[=INTERVAL] option similar to unix "top". This allows users to