@@ -1,0 +1,25 @@
+global a, b, c, d, e, f, g, h, i, j
+probe oneshot {
+  a <<< 1
+  b[1] <<< 2; b[1] <<< 3; b[2] <<< 4
+  c[1,1] <<< 2; c[1,1] <<< 3; c[2,2] <<< 4
+  d[1,1,1] <<< 2; d[1,1,1] <<< 3; d[2,2,2] <<< 4
+  e[1,1,1,1] <<< 2; e[1,1,1,1] <<< 3; e[2,2,2,2] <<< 4
+  f[1,1,1,1,1] <<< 2; f[1,1,1,1,1] <<< 3; f[2,2,2,2,2] <<< 4
+  g[1,1,1,1,1,1] <<< 2; g[1,1,1,1,1,1] <<< 3; g[2,2,2,2,2,2] <<< 4
+  h[1,1,1,1,1,1,1] <<< 2; h[1,1,1,1,1,1,1] <<< 3; h[2,2,2,2,2,2,2] <<< 4
+  i[1,1,1,1,1,1,1,1] <<< 2; i[1,1,1,1,1,1,1,1] <<< 3; i[2,2,2,2,2,2,2,2] <<< 4
+  j[1,1,1,1,1,1,1,1,1] <<< 2; j[1,1,1,1,1,1,1,1,1] <<< 3; j[2,2,2,2,2,2,2,2,2] <<< 4
+}
+probe end {
+  @prints(a)
+  @prints1(b)
+  @prints2(c)
+  @prints3(d)
+  @prints4(e)
+  @prints5(f)
+  @prints6(g)
+  @prints7(h)
+  @prints8(i)
+  @prints9(j)
+}
